fixed : mobile overlap between exporter btn, search bar and open_all btn

--- a/src/datatable/exporter/exporter.scss
+++ b/src/datatable/exporter/exporter.scss
@@ -51,6 +51,8 @@ div.dt-buttons {
     top: 45px;
     width: 40px;
     z-index: 2;
-    background: $background-1;
+    &[is_open="true"] {
+      background: $background-1;
+    }
   }
 }
